[package]
name = "s502-as"
version = "0.1.0"
edition = "2021"

[dependencies]
afl = { version = "0.12.8", optional = true }
clap = { version = "3.2.12", features = ["cargo"] }
codespan-reporting = "0.11.1"
enum-map = "2.4.1"
indoc = "1.0.7"
logos = "0.12.1"

[dev-dependencies]
test_bin = "0.4.0"

[features]
fuzzing = ["afl"]